[package]
authors     = ["Harrison Totty <harrisongtotty@gmail.com>"]
description = "A TUI N-Body Simulation Program"
edition     = "2018"
name        = "grav"
publish     = false
readme      = "README.md"
version     = "0.1.0"

[[bin]]
name = "grav"
path = "build/main.rs"

[dependencies.chrono]
version = "0.4"

[dependencies.clap]
features = ["color"]
version = "2.32.0"

[dependencies.fern]
version = "0.5.7"

[dependencies.log]
version = "0.4.6"